--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,7 +7,7 @@ $black: #333;
 $grey:#eaeaea;
 $theme-color: #e16038;
 $body-text-color: #333;
-$hr-border-color:#eee;
+$hr-border-color:#fafafa;
 
 
 // Heading Color
