--- a/assets/scss/_features.scss
+++ b/assets/scss/_features.scss
@@ -1,6 +1,6 @@
-//FEATURES START
+//Features Start
 .features-area {
-    background-color: #f9f9f9;
+    background-color: $grey;
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
@@ -25,7 +25,7 @@
     &::before {
         position: absolute;
         content: '';
-        background: #333;
+        background: $body-text-color;
         width: 50%;
         height: 100%;
         top: 0;
@@ -48,12 +48,6 @@
     }
 }
 
-
-
-
-
-
-
 .single-feature {
     & i {
         font-size: 25px;
@@ -65,6 +59,4 @@
         margin-bottom: 15px;
         text-transform: capitalize;
     }
-
-    & p {}
 }
