--- a/assets/scss/_project.scss
+++ b/assets/scss/_project.scss
@@ -1,3 +1,4 @@
+//Project Start
 .projects {
     &__item {
         position: relative;
@@ -24,14 +25,14 @@
                 content: '';
                 width: 100%;
                 height: 100%;
-                background-color: #333;
+                background-color: $body-text-color;
                 opacity: .8;
                 left: 0;
                 top: 0;
             }
 
             &-content {
-                color: #fff;
+                color: $white;
                 position: absolute;
                 z-index: 2;
                 left: 50%;
@@ -46,7 +47,7 @@
                 & h3 {
                     font-size: 25px;
                     text-transform: capitalize;
-                    color: #fff;
+                    color: $white;
                     margin-top: 10px;
 
                     & span {
