--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -26,6 +26,10 @@
                     color: $body-text-color;
                     margin: 0 10px;
                     font-size: 16px;
+
+                    @media #{$lg} {
+                        display: block;
+                    }
                 }
             }
 
