--- a/assets/scss/_client-area.scss
+++ b/assets/scss/_client-area.scss
@@ -1,6 +1,6 @@
 //Client Start
 .client-area {
-    background: #fafafa;
+    background: $hr-border-color;
     padding-top: 35px;
     background: $grey;
 
