--- a/assets/scss/_process.scss
+++ b/assets/scss/_process.scss
@@ -27,5 +27,12 @@
 
     p {
         text-align: center;
+
+        @media #{$md},
+        #{$xs} {
+            & br {
+                display: none;
+            }
+        }
     }
 }
