--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -25,7 +25,7 @@ $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
 
 /*
-    @media #{laptop}{
+    @media #{$laptop}{
 
     }
 */
