--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -31,6 +31,10 @@
                     font-weight: 400;
                     font-style: italic;
                     margin-top: 5px;
+
+                    @media #{$xs} {
+                        font-size: 16px;
+                    }
                 }
             }
 
